Context per issue_list

--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -2,4 +2,8 @@
 
 {% block content %}
     <p>hola</p>
+    {% for issue in issues %}
+        <p>holaaaa</p>
+        {{ issue.subject }}
+    {% endfor %}
 {% endblock %}
