--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 <html>
-    <link rel="stylesheet" href="issues.css">
+    <link rel="stylesheet" href="./issues.css">
+    
 <head>
 
 </head>
@@ -8,12 +9,28 @@
 
 
     {% for issue in issues %}
+    <div style=" background: #f9f9fb;margin-bottom: 0.75rem;padding: 0.6rem;">
+        <p style="display: inline">
         {% if issue.tipus == "B" %}
+            <p class="circle" style="background: rgb(228, 64, 87);
+            border-radius: 50%;
+            width: 18px;
+            height: 18px;"></p>
         {%endif%}
+        <p class="circle" style="background: rgb(228, 64, 87);
+            border-radius: 50%;
+            width: 18px;
+            height: 18px;
+           "></p>
+            <p class="circle" style="background: rgb(228, 64, 87);
+            border-radius: 50%;
+            width: 18px;
+            height: 18px;"></p>
+        </p>
         
         <div style="width: 100%;">
-            <div class="dot"style="background-color: rgb(228, 64, 87)"></div>
-            <p style="display: inline">
+           
+            <p style="display: inline;">
                 <span style="width: 150x;">#{{issue.id}} {{issue.subject}}</span> 
                 {%if issue.estat == 'N' %}
                     <span>Nova</span> 
@@ -33,11 +50,14 @@
                     
                 <span type="date">{{issue.dataModificacio}}</span>
                 <span >{{issue.creador}}</span>
+                
+
+    
             </p> 
            
             
         </div>
-       
+    </div>  
     {% endfor %}
 {% endblock %}
 </html>
