--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load static %}
 <html>
-    <link rel="stylesheet" href="./issues.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'issues.css'%}">
     
 <head>
 
@@ -9,29 +10,68 @@
 
 
     {% for issue in issues %}
-    <div style=" background: #f9f9fb;margin-bottom: 0.75rem;padding: 0.6rem;">
-        <p style="display: inline">
-        {% if issue.tipus == "B" %}
-            <p class="circle" style="background: rgb(228, 64, 87);
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;"></p>
-        {%endif%}
-        <p class="circle" style="background: rgb(228, 64, 87);
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;
-           "></p>
-            <p class="circle" style="background: rgb(228, 64, 87);
-            border-radius: 50%;
-            width: 18px;
-            height: 18px;"></p>
-        </p>
+    <div style=" background: #e1e1e3;margin-bottom: 0.75rem;padding: 0.6rem;">
+        <table>
+            <tr>
+                <td style="margin-left: 100px;margin-right: 100px;">
+                    {% if issue.tipus == "B" %}
+                        <p class="circle" style="background: rgb(228, 64, 87);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                    {%elif issue.tipus == "P"%}
+                        <p class="circle" style="background: rgb(189, 252, 170);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                    {%elif issue.tipus == "M"%}
+                        <p class="circle" style="background: rgb(255, 153, 0);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                    {%endif%}
+                  
+                </td>
+                <td>
+                    <p class="circle" style="background: rgb(228, 64, 87);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                </td>
+                <td>
+                    {% if issue.prioritat == "B" %}
+                        <p class="circle" style="background: rgb(189, 252, 170);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                    {%elif issue.prioritat == "M"%}
+                        <p class="circle" style=" background: rgb(255, 153, 0);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                    {%elif issue.prioritat == "A"%}
+                        <p class="circle" style="background: rgb(228, 64, 87);
+                        border-radius: 50%;
+                        width: 18px;
+                        height: 18px;
+                        margin-left: 10px;margin-right: 10px;"></p>
+                    {%endif%}
+                </td>
+                    
+            
+            
         
-        <div style="width: 100%;">
+        
+        <td>
            
-            <p style="display: inline;">
-                <span style="width: 150x;">#{{issue.id}} {{issue.subject}}</span> 
+            <p>
+                <span>#{{issue.id}} {{issue.subject}}</span> 
                 {%if issue.estat == 'N' %}
                     <span>Nova</span> 
                 {%elif issue.estat == 'D'%}
@@ -56,7 +96,9 @@
             </p> 
            
             
-        </div>
+        </td>
+    </tr>
+    </table>
     </div>  
     {% endfor %}
 {% endblock %}
