Es mostren bé els issues

--- a/issues/static/issues.css
+++ b/issues/static/issues.css
@@ -9,3 +9,12 @@ circle {
     color: navy;
     margin-left: 20px;
   }
+p{
+    font-family: sans-serif;
+}
+span{
+    font-family: sans-serif;
+}
+body{
+    font-family: sans-serif;
+}
