--- a/issuePeople/templates/base.html
+++ b/issuePeople/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ca">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>IssuePeople</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/theme-taiga.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
