--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -1,30 +1,15 @@
 
 {% extends 'base.html' %}
-{% load static %}
-<html >
-    <link rel="stylesheet" type="text/css" href="issues.css'">
-    
-<head>
-    <style>
-        tr:hover {background-color: coral;}
-    </style>
-
-</head>
-
 {% block content %}
 
 
     {% for issue in issues %}
     <div style=" background: #e1e1e3;margin-left: 10px;margin-bottom: 0.75rem;padding: 0.6rem; border-radius: 3px;">
         <table style="width: 100% ;table-layout:auto;">
-            <tr>
+            <tr class="row title">
                 <td style="margin-left: 100px;margin-right: 100px; width: 5%;">
                     {% if issue.tipus == "B" %}
-                        <p class="circle" style="background: rgb(228, 64, 87);
-                        border-radius: 50%;
-                        width: 18px;
-                        height: 18px;
-                        margin-left: 10px;margin-right: 10px;"></p>
+                        <div class="level" style="background: rgb(228, 64, 87)"></div>
                     {%elif issue.tipus == "P"%}
                         <p class="circle" style="background: rgb(189, 252, 170);
                         border-radius: 50%;
@@ -113,7 +98,3 @@
     </div>  
     {% endfor %}
 {% endblock %}
-
-</body>
-</html>
-
