Afegit butó tancar form

--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -104,7 +104,7 @@
                                 
                                 <td class="assigned-field" style="text-align: center;
                                 vertical-align: middle;">   
-                                    <span class="issue-assignedto">{{issue.assignacio.username}}</span>
+                                    <span class="issue-assignedto">{{issue.assignacio.user.username}}</span>
                                 </td>
                                 
                             </tr> 
