--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -2,14 +2,13 @@
 {% block content %}
 
     <div class="lightbox lightbox-generic-form lightbox-create-edit open">
+        <a class="close" href="/issues/list">
+            <p>X</p>
+        </a>
         <form method="post">
             {% csrf_token %}
             {{ form }}
             <input type="submit" value="CREATE" class="btn-big add-item" style="margin-top: 10px; margin-bottom: 10px;">
-            <button class="btn-big add-item" style="background-color: #ff4747; height: 40.8px; margin-top: 10px; margin-bottom: 10px;">
-                GO BACK
-                <a href="/issues/list"></a> 
-            </button>
         </form>
     </div>
 
