--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -1,5 +1,6 @@
 
 {% extends 'base.html' %}
+
 {% block content %}
 
 <div class="master" style>
@@ -16,9 +17,11 @@
                         <span>Issues</span>
                     </h1>
                     <div class="taskboard-actions">
-                        <div class="issue-table-options-start">
-                            <button class="btn-filter">
-                                <span class="text">Filters</span>
+                        <div class="issue-table-options-start" >
+                            <button class="btn-filter" onclick="myFunction()">
+                                <img src="   https://cdn-icons-png.flaticon.com/512/10035/10035140.png " width="15" height="15" alt="" title="" class="img-small" >
+                                
+                                <span class="text" style="margin: 5px;">Filters</span>
                             </button>
                         </div>
                         <div class="new-issue">
@@ -30,6 +33,47 @@
                 </header>
             </div>
             <div class="issue-container">
+                
+                <sidebar class="filters-bar" id="filtres"  >
+                    <div>
+                        <div class="filters-step-cat">
+                            <div class="filters-advanced">
+                                <div class="filters-advanced-form">
+                                    <div class="custom-radio"></div>
+                                    <div class="custom-radio"></div>
+                                </div>
+                            </div>
+                            <div class="filters-cat">
+                                <ul>
+                                    <li>
+                                        <button class="filters-cat-single">
+                                            <span>Tipus</span>
+                                            <div class="ng-animate-disabled">
+                                                <svg class="icon icon-arrow-right" style="fill: cred">
+                                                    <img src="   https://cdn-icons-png.flaticon.com/512/271/271228.png " width="10" height="10" alt="" title="" class="img-small">
+                                            
+                                                </svg>
+                                            </div>
+                                           
+                                        </button>
+                                    </li>
+                                    <li>
+                                        <button class="filters-cat-single">
+                                            <span>Gravetat</span>
+                                            <div class="ng-animate-disabled">
+                                                <svg class="icon icon-arrow-right" style="fill: cred">
+                                                    <img src="   https://cdn-icons-png.flaticon.com/512/271/271228.png " width="10" height="10" alt="" title="" class="img-small">
+                                            
+                                                </svg>
+                                            </div>
+                                           
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </sidebar>
                 <div class="issue-page"style="width: 100%;">
                    <table class="issues-table" style="width: 100%;">
                         
@@ -115,4 +159,16 @@
             </div>
 </div>
 </div>
+
+    
+    <script type="text/javascript">
+        function myFunction() {
+  var x = document.getElementById("filtres");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+        </script>
 {% endblock %}
