Afegit info usuari sense variables a pagina perfil

--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -3,7 +3,45 @@
 
 {% block content %}
 
+<div>
+    <section class="profile-bar">
+        <div>
+            <img src="https://static9.depositphotos.com/1010305/1139/i/600/depositphotos_11390423-stock-photo-kitten-on-a-white-background.jpg"
+            width="200"
+            height="200">
+        </div>
 
-<p>PAtatatat</p>
+        <div class="profile-data">
+            <h1 class="not-full-name">
+                <p>usuario</p>
+            </h1>
+            <div class="username">
+                <p>@usuario</p>
+            </div>
+            <h2>Posicion</h2>
+        </div>
+        <div class="profile-stats">
+            <div class ="stat">
+                <span class="stat-number">X</span>
+                <span class="stat-name">
+                    Projectes
+                </span>
+            </div>
+            <div class ="stat">
+                <span class="stat-number">Y</span>
+                <span class="stat-name">US tancats</span>
+            </div>
+            <div class="stat">
+                <span class="stat-number">Z</span>
+                <span class="stat-name">Contactes</span>
+            </div>
+        </div>
+    </section>
+    <div class="main">
+        <p>
+            Hola buenas
+        </p>
+    </div>
+</div>
 
 {% endblock %}
