--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 
-<div>
+
+<div class="profile centered" style="margin-left: 50px;">
     <section class="profile-bar">
         <div>
             <img src="https://static9.depositphotos.com/1010305/1139/i/600/depositphotos_11390423-stock-photo-kitten-on-a-white-background.jpg"
@@ -39,9 +40,11 @@
     </section>
     <div class="main">
         <p>
-            Hola buenas
+            Hola buenas, timelineContent
         </p>
     </div>
 </div>
+
+
 
 {% endblock %}
