Task #8: Afegim la resta de camps a la creació d'issues

--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -15,7 +15,7 @@
                         
                         <!-- left side -->
                         <div class="main">
-                            <input value="" type="text">
+                            <input value="" type="text" name="subject">
                             <textarea rows="7" class="description ng-pristine ng-untouched ng-valid ng-empty">Description</textarea>
                             <input value="" type="text">
                         </div>
