Afegit elements pagina usuari

--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -3,6 +3,15 @@
 
 {% block content %}
 
+<nav class ="navbar" style>
+    <div class="nav-left">
+        <a href="/issues/list/" title="Homepage" class="logo">
+
+        </a>
+        
+    </div>
+</nav>
+
 
 <div class="profile centered" style="margin-left: 50px;">
     <section class="profile-bar">
