Task #44 Add label button

--- a/usuaris/templates/usuaris_login.html
+++ b/usuaris/templates/usuaris_login.html
@@ -16,7 +16,7 @@
                             <input style="margin-bottom: 5px;" type="password" name="password" data-required="true" placeholder="Password (case sensitive)" >
                             <a href="">Forgot it?</a>
                         </div>
-                        <input type="submit" name="login" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">
+                        <input type="submit" name="login" value="LOGIN" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">
                     </form>
 
                     <!-- Login propi -->
