--- a/usuaris/templates/usuaris_singUp.html
+++ b/usuaris/templates/usuaris_singUp.html
@@ -19,7 +19,7 @@
                             <a href="">Forgot it?</a>
                         </div>
                         <div>
-                            <input type="submit" name="login" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">
+                            <input type="submit" name="login" value="sing Up" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">
                         </div>
                     </form>
 
