--- a/usuaris/templates/usuaris_login.html
+++ b/usuaris/templates/usuaris_login.html
@@ -9,14 +9,21 @@
                 <h1 class="logo">Taiga</h1>
                 <h2 class="tagline">LOVE YOUR PROJECT</h2>
                 <div class="login-form-container">
+
+                <!-- ToDo: Posar maco! -->
+                    {% for error in form.errors.values %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+
                     <!-- Login propi -->
-                    <form class="login-form ng-pristine ng-valid">
+                    <form class="login-form ng-pristine ng-valid" method="post">
+                        {% csrf_token %}
                         <input style="margin-bottom: 5px;" type="text" autocorrect="off" autocapitalize="none" autofocus required name="username" data-required="true" placeholder="Username or email (case sensitive)">
                         <div class="login-password">
                             <input style="margin-bottom: 5px;" type="password" name="password" data-required="true" placeholder="Password (case sensitive)" >
                             <a href="">Forgot it?</a>
                         </div>
-                        <input type="submit" name="login" value="LOGIN" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">
+                        <button type="submit" name="login" value="LOGIN" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">LOGIN</button>
                     </form>
 
                     <!-- Login propi -->
