task #89 registre usuaris amb email i username

--- a/usuaris/templates/usuaris_login.html
+++ b/usuaris/templates/usuaris_login.html
@@ -36,7 +36,7 @@
                     </div>
                     <span>
                         Not registred yet? 
-                        <a href="">create your free account here</a>
+                        <a href="{% url 'registre' %}">create your free account here</a>
                     </span>
                 </div>
             </div>
