--- a/usuaris/templates/usuaris_singUp.html
+++ b/usuaris/templates/usuaris_singUp.html
@@ -10,16 +10,17 @@
                 <h2 class="tagline">LOVE YOUR PROJECT</h2>
                 <div class="login-form-container">
                     <!-- Login propi -->
-                    <form class="login-form ng-pristine ng-valid" style="justify-content: space-around;">
+                    <form method="post" class="login-form ng-pristine ng-valid" style="justify-content: space-around;">
+                        {% csrf_token %}
                         <input style="margin-bottom: 5px;" type="text" autocorrect="off" autocapitalize="none" autofocus required name="username" data-required="true" placeholder="Pick a username">
-                        <input style="margin-bottom: 5px;" type="text" autocorrect="off" autocapitalize="none" autofocus required name="fullname" data-required="true" placeholder="Pick your full name">
+                        <input style="margin-bottom: 5px;" type="text" autocorrect="off" autocapitalize="none" autofocus required name="name" data-required="true" placeholder="Pick your full name">
                         <input style="margin-bottom: 5px;" type="text" autocorrect="off" autocapitalize="none" autofocus required name="email" data-required="true" placeholder="Your email">
                         <div class="login-password" >
                             <input style="margin-bottom: 5px;" type="password" name="password" data-required="true" placeholder="Set a password (case sensitive)" >
-                            <a href="">Forgot it?</a>
+                            <input style="margin-bottom: 5px;" type="password" name="password2" data-required="true" placeholder="Repeat password" >
                         </div>
                         <div>
-                            <input type="submit" name="login" value="sing Up" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">
+                            <button type="submit" name="login" value="sing Up" class="btn-small full" style="margin-top: 10px; margin-bottom: 10px;">sing Up</button>
                         </div>
                     </form>
 
@@ -34,7 +35,7 @@
                     </div>
                     <span>
                         Not registred yet? 
-                        <a href="">create your free account here</a>
+                        <a href="{% url 'login' %}">create your free account here</a>
                     </span>
                 </div>
             </div>
