--- a/usuaris/templates/usuaris_singUp.html
+++ b/usuaris/templates/usuaris_singUp.html
@@ -28,7 +28,7 @@
                     <div class="contrib-plugins-wrapper">
                         <label>Or login with</label>
                         <div >
-                            <a href="" title="Enter with your google account" class="button button-auth">
+                            <a href="{% provider_login_url 'google' %}" title="Enter with your google account" class="button button-auth">
                                 <span>Sign in with Google   </span>
                             </a>
                         </div>
