--- a/issues/templates/issue_bulk.html
+++ b/issues/templates/issue_bulk.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
+    <form method="post" >
+    {% csrf_token %}
+        <textarea type="text" name="subjects"></textarea>
+        <button type="submit">Submit</button>
+    </form>
 
 {% endblock %}
 
